@@ -778,6 +778,8 @@ ROW   |23630 |3   |                 |                                           
 ROW   |23631 |3   |                 |                                                           |10091 |Datastore discovery                                              |vmware.hv.datastore.discovery[{$URL},{HOST.HOST}]                              |3600 |90     |0     |0     |4         |             |        |0         |0    |                   |0                   |                     |                     |       |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |1    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23632 |3   |                 |                                                           |10091 |Average read latency of the datastore $3                         |vmware.hv.datastore.read[{$URL},{HOST.HOST},{#DATASTORE},latency]              |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23633 |3   |                 |                                                           |10091 |Average write latency of the datastore $3                        |vmware.hv.datastore.write[{$URL},{HOST.HOST},{#DATASTORE},latency]             |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |23665 |3   |                 |                                                           |10091 |Total size of datastore $3                                       |vmware.hv.datastore.size[{$URL},{HOST.HOST},{#DATASTORE}]                      |60   |90     |365   |0     |3         |             |B       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |23666 |3   |                 |                                                           |10091 |Free space on datastore $3 (percentage)                          |vmware.hv.datastore.size[{$URL},{HOST.HOST},{#DATASTORE},pfree]                |60   |90     |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23663 |3   |                 |                                                           |10091 |Health state rollup                                              |vmware.hv.sensor.health.state[{$URL},{HOST.HOST}]                              |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |13        |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |The host health state rollup sensor value: gray - unknown, ok, red - it has a problem, yellow - it might have a problem.                                                                                                                                                                                                                                                                                                                  |0             |30      |0                  |0                  |                  |0       |
 ROW   |23634 |5   |                 |                                                           |10047 |Zabbix vmware cache, % free                                      |zabbix[vmware,buffer,pfree]                                                    |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23636 |16  |                 |                                                           |10082 |jvm Name                                                         |jmx["java.lang:type=Runtime",VmName]                                           |3600 |7      |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
@@ -2994,6 +2996,8 @@ ROW   |5873     |458          |23658 |
 ROW   |5874     |458          |23659 |
 ROW   |5876     |418          |23663 |
 ROW   |5881     |328          |23664 |
+ROW   |5882     |445          |23665 |
+ROW   |5883     |445          |23666 |
 
 TABLE |mappings
 FIELDS|mappingid|valuemapid|value|newvalue                              |
@@ -3359,6 +3363,8 @@ ROW   |208            |23607 |23600        |
 ROW   |209            |23608 |23600        |
 ROW   |218            |23632 |23631        |
 ROW   |219            |23633 |23631        |
+ROW   |220            |23665 |23631        |
+ROW   |221            |23666 |23631        |
 
 TABLE |host_discovery
 FIELDS|hostid|parent_hostid|parent_itemid|
