@@ -81,6 +81,10 @@ typedef struct
 {
 	char	*name;
 	char	*uuid;
+
+	zbx_uint64_t	capacity;
+	zbx_uint64_t	free_space;
+	zbx_uint64_t	uncommitted;
 }
 zbx_vmware_datastore_t;
 
